--- a/wiki/Screenshots.wiki
+++ b/wiki/Screenshots.wiki
@@ -20,7 +20,8 @@ Get character information including:
 {{{
 $ cjknife -i 周
 Information for character 周 (traditional locale, Unicode domain)
-Unicode codepoint: 0x5468 (21608, character form)
+Unicode codepoint: U+5468 (21608, character form)
+In character domains: Unicode, BIG5, JISX0208, GlyphInformation, JISX0208_0213, GB2312, BIG5HKSCS, IICore
 Radical index: 30, radical form: ⼝
 Stroke count: 8
 Phonetic data (CantoneseYale): jāu
@@ -30,6 +31,7 @@ Phonetic data (Jyutping): zau1
 Phonetic data (MandarinBraille): ⠌⠷⠁
 Phonetic data (MandarinIPA): tʂou˥˥
 Phonetic data (Pinyin): zhōu
+Phonetic data (ShanghaineseIPA): ʦɤ˥˧
 Phonetic data (WadeGiles): chou1
 Semantic variants: 週
 Glyph 0(*), stroke count: 8
@@ -123,45 +125,13 @@ lau˨˩.ʂʅ˥˥
 === Dictionary lookup ===
 _The following extracts are taken from [http://www.csse.monash.edu.au/~jwb/j_edict.html EDICT] and [http://www.mdbg.net/chindict/chindict.php?page=cedict CC-CEDICT] licensed under the Creative Commons Attribution-Share Alike 3.0 License._
 
-Looking for entries including a term in Chinese characters:
-{{{
-$ cjknife -w CEDICT -c 漢字
-漢字, Hàn zì, /Chinese character, kanji/
-漢字查字法, Hàn zì chá zì fǎ, /look-up method for Chinese characters/
-漢字輸入, Hàn zì shū rù, /Chinese character input/method for typing Chinese/
-漢字輸入系統, Hàn zì shū rù xì tǒng, /Chinese character input system/
-漢字字體, Hàn zì zì tǐ, /calligraphic style of Chinese characters/typeface/font/
-統漢字, tǒng Hàn zì, /Unihan/CJK unified ideographs/
-}}}
-
 Looking for an exact English term:
 {{{
-$ cjknife -w CEDICT -x "knowledge"
-見聞, jiàn wén, /what one sees and hears/knowledge/information/
-認識, rèn shi, /to know/to recognize/to be familiar with/acquainted with sth/kno
-wledge/understanding/awareness/cognition/
-識, shí, /to know/knowledge/Taiwan pr. shi4/
-諝, xǔ, /deceit/knowledge/
-學問, xué wèn, /learning/knowledge/
-知識, zhī shi, /intellectual/knowledge-related/knowledge/
-智, zhì, /wisdom/knowledge/
-智慧, zhì huì, /wisdom/knowledge/
+$ cjknife -w EDICT -x "Tokyo"
+東京 とうきょう /(n) Tokyo (current capital of Japan)/(P)/
 }}}
 
 Looking for exact matches to a given reading:
-{{{
-$ cjknife -w EDICT -x かんじ
-冠辞, かんじ, /(n) stereotyped epithet/
-官事, かんじ, /(n) government business/
-官寺, かんじ, /(n) state-sponsored temples, particularly those favored and prote
-cted by the shogunate during the Kamakura period/
-寛治, かんじ, /(n) Kanji era (1087.4.7-1094.12.15)/
-幹事, かんじ, /(n,vs) executive secretary/coordinator/arranging/(P)/
-感じ, かんじ, /(n) feeling/sense/impression/(P)/
-漢字, かんじ, /(n) Chinese characters/kanji/(P)/
-監事, かんじ, /(n) manager/supervisor/
-莞爾, かんじ, /(adv-to) smiling/
-}}}
 {{{
 $ cjknife -w CEDICT -x "zhishi"
 知識, zhī shi, /intellectual/knowledge-related/knowledge/
@@ -174,4 +144,31 @@ s self-explanatory character/
 致使, zhì shǐ, /cause/result in/
 制式, zhì shì, /standard (format, e.g. PAL or SECAM for TV signal)/system/servic
 e pattern/type of service/
+}}}
+
+Wildcards:
+{{{
+$ cjknife -w EDICT -x "東京_"
+東京語 とうきょうご /(n) Tokyo dialect (esp. historical)/
+東京着 とうきょうちゃく /(n) arriving in Tokyo/
+東京都 とうきょうと /(n) Tokyo Metropolitan area/
+東京発 とうきょうはつ /(n) departing Tokyo/
+東京湾 とうきょうわん /(n) Tokyo Bay/Bay of Tokyo/
+}}}
+{{{
+$ cjknife -w CEDICT -x %漢字%
+漢字, Hàn zì, /Chinese character, kanji/
+漢字查字法, Hàn zì chá zì fǎ, /look-up method for Chinese characters/
+漢字輸入, Hàn zì shū rù, /Chinese character input/method for typing Chinese/
+漢字輸入系統, Hàn zì shū rù xì tǒng, /Chinese character input system/
+漢字字體, Hàn zì zì tǐ, /calligraphic style of Chinese characters/typeface/font/
+統漢字, tǒng Hàn zì, /Unihan/CJK unified ideographs/
+}}}
+
+Mixing headword and reading:
+{{{
+$ cjknife -w CEDICT -x "中國hua"
+中國化（中国化） Zhōng guó huà /to Sinicize/to take on Chinese characteristics/
+中國畫（中国画） Zhōng guó huà /Chinese painting/
+中國話（中国话） Zhōng guó huà /(spoken) Chinese language/
 }}}
